<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="8"
        android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:orientation="vertical"
        android:layout_weight="2"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:layout_gravity="center"
                    android:text="@string/covid"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/provinsi"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"/>

                <Spinner
                    android:id="@+id/cases_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_background"
                    android:padding="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/colorSemiDark">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="2">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="16dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/pantau"/>
                            <TextView
                                android:id="@+id/namaNegara"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="-"
                                android:layout_gravity="center"
                                android:textColor="@color/colorPrimary"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:layout_gravity="center">

                            <TextView
                                android:id="@+id/positifNegara"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="-"
                                android:textColor="@color/colorSoftYellow"
                                android:textSize="26sp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/positif"
                                android:layout_gravity="center"/>
                        </LinearLayout>

                    </LinearLayout>



                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:layout_marginTop="16dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="8dp"
                        app:cardBackgroundColor="@color/colorSemiDark">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/sembuhNegara"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:gravity="bottom"
                                android:textAlignment="center"
                                android:text="-"
                                android:textSize="26sp"
                                android:textColor="@color/colorSoftGreen"
                                tools:ignore="RtlCompat" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:textAlignment="center"
                                android:text="@string/sembuh"/>
                        </LinearLayout>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="8dp"
                        app:cardBackgroundColor="@color/colorSemiDark">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/meninggalNegara"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:gravity="bottom"
                                android:textAlignment="center"
                                android:text="-"
                                android:textSize="26sp"
                                android:textColor="@color/colorSoftRed"
                                tools:ignore="RtlCompat" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:textAlignment="center"
                                android:text="@string/meninggal"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="6"
        app:cardBackgroundColor="@color/colorSemiDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_kasus"
                android:textAlignment="center"
                android:paddingBottom="24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terkonfirmasi"
                        android:gravity="bottom"
                        android:textAlignment="center"
                        tools:ignore="RtlCompat" />

                    <TextView
                        android:id="@+id/totalPositif"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="-"
                        android:textAlignment="center"
                        android:textColor="@color/colorSoftYellow"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sembuh"
                            android:gravity="bottom"
                            android:textAlignment="center"
                            tools:ignore="RtlCompat" />
                        <TextView
                            android:id="@+id/totalSembuh"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="-"
                            android:textSize="20dp"
                            android:textColor="@color/colorSoftGreen"
                            android:textAlignment="center"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/meninggal"
                            android:gravity="bottom"
                            android:textAlignment="center"
                            tools:ignore="RtlCompat" />
                        <TextView
                            android:id="@+id/totalMeninggal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="-"
                            android:textSize="20dp"
                            android:textColor="@color/colorSoftRed"
                            android:textAlignment="center"/>
                    </LinearLayout>

                </LinearLayout>




            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>